--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-paper": "^4.12.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
